fix dark mode

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -142,7 +142,7 @@ html.themeDark {
 
 	.input.isReadonly { background: rgba(255,255,255,0.1); }
 
-    .inputWithFile { border-color: transparent; }
+    .inputWithFile { border-color: transparent; background-color: var(--color-shape-highlight-medium); }
 
     .listPreviewObject {
         .icon.arrow { background-image: url('#{$themePath}/arrow/template0.svg'); }
